<resources>
    <string name="app_name">Central Air</string>
    <string name="splash_screen">SplashScreenActivity</string>

    <string name="navOpen">Open</string>
    <string name="navClose">Close</string>
    <string name="MsgCheckConnection">Please check internet connection</string>
    <string name="MsgValidation">Please correct the errors</string>
    <string name="MsgOldPassword">Old password is not correct</string>
    <string name="MsgServerNotResponding">Connection failed, Try again</string>
    <!--<string name="MsgServerNotResponding">Server not responding, Try again later</string>-->
    <string name="MsgUpdateFail">Failed to update record</string>
    <string name="MsgUpdatePassword">Password changed successfully</string>
    <string name="MsgSelectFail">Failed to select record</string>
    <string name="MsgOffer">Currently no offers available.</string>
    <string name="MsgCancelOrder">Order Payment is done</string>
    <string name="MsgCancelBooking">Booking Payment is done.</string>
    <string name="MsgConfirmSettings">Push notification off?</string>
    <string name="MsgNoRecordFound">There is no %s</string>
    <string name="MsgNoRecord">There is no record.</string>
    <string name="notification">notification</string>

    <!--login detail-->
    <string name="siLoginFailedMsg">Username or Password are invalid.</string>
    <string name="siLoginDisable">User is disabled by administrator.</string>
    <string name="clear_text">Clear Text</string>
    <string name="siLoginBlocked">User is blocked.</string>
    <string name="action_settings">Settings</string>
    <string name="user_text">User Name</string>
    <string name="siSignIn">Sign In</string>
    <string name="siPassword">Password</string>
    <string name="siForgotPassword">Forgot Password?</string>
    <string name="siLogIn">LogIn</string>
    <string name="siUserName">Username</string>
    <string name="siLogout">Logout</string>
    <!--end-->

    <!--navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_my_account">My Account</string>
    <string name="drawer_analysis">Analysis</string>
    <string name="drawer_events">Events</string>
    <string name="drawer_business">Business</string>
    <string name="drawer_offers">Offers</string>
    <string name="drawer_notification">Notification</string>
    <string name="drawer_rate_us">Rate Us</string>
    <string name="drawer_exit">Exit</string>
    <string name="logout">Logout</string>
    <!--end-->

    <!-- home fragment -->
    <string name="title_fragment_home_options">Home Option</string>
    <string name="golfNewOrders">New Orders</string>
    <string name="golfCancelledOrders">Cancelled Orders</string>
    <string name="golfCount">0</string>
    <string name="golfNewBookings">New Bookings</string>
    <string name="golfCancelledBookings">Cancelled Bookings</string>
    <string name="golfOffers">Offers</string>
    <string name="golfReedem">Reedem</string>
    <string name="retry">Retry</string>
    <string name="siSomethingWrong">Something went wrong.</string>
    <string name="golfDailySales">Daily Sales</string>
    <string name="golfWeeklySales">Weekly Sales</string>
    <string name="golfMonthlySales">Monthly Sales</string>
    <string name="salesAnalysis">Sales Analysis</string>
    <!--end-->

    <!-- TODO: Remove or change this placeholder text -->
    <!--title name-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_analysis">Sales Analysis</string>
    <string name="title_pie_chart">Pie Chart</string>
    <string name="title_line_chart">Line Chart</string>
    <string name="title_horizontal_chart">Horizontal Chart</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_fragment_your_profile">My Profile</string>
    <string name="title_fragment_change_password">Change Password</string>
    <string name="title_activity_offer">Offers</string>
    <string name="title_activity_offer_detail">Offer Detail</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_daily_sales">Daily Sales Report</string>
    <string name="title_fragment_notification_settings">Notification Settings</string>
    <!--end-->

    <string name="dfRupee">\u20B9</string>
    <string name="zeroRupee">0.0</string>

    <!--MyAccountActivity array-->
    <string-array name="Option">
        <item>Notification Settings</item>
        <item>Change Password</item>
        <item>Logout</item>
    </string-array>

    <string-array name="isOptionSwitch">
        <item>true</item>
        <item>false</item>
        <item>false</item>
    </string-array>
    <!--end-->

    <!--sign up account-->
    <string name="suFirstName">First Name</string>
    <string name="suPhone">Mobile</string>
    <string name="suBirthDate">Birth Date</string>
    <string name="suMale">Male</string>
    <string name="suFemale">Female</string>
    <string name="upUpdateprofile">Update Profile</string>
    <string name="action_my_account">My Account</string>
    <!--end-->

    <!--change password-->
    <string name="cpOldPassword">Old Password</string>
    <string name="cpNewPasssword">New Password</string>
    <string name="cpConfirmPassword">Confirm Password</string>
    <string name="cpChangePassword">Change Password</string>
    <string name="cpPasswordMisMatch">New and confirm password do not match</string>
    <!--end-->

    <!--offer detail-->
    <string name="rExpiresOn">Expires On</string>
    <string name="abBuildVersion">Build Version</string>
    <string name="odaOfferHighLight">Highlights</string>
    <string name="odaOfferCondition">Terms and condition</string>
    <string name="odaValidOn">Valid on %s</string>
    <string name="odaValidFor">Valid for %s</string>
    <string name="odaOfferFor">Offer for %s</string>
    <string name="odaOfferDiscountWithRupee">\u20B9 %s OFF</string>
    <string name="odaOfferDiscount">%s\uff05 OFF</string>
    <string name="odaMinAmt">Minimum Bill Amount \u20B9 %s</string>
    <string name="odaOfferValid">online and app</string>
    <string name="odaOfferValidOnline">online only</string>
    <string name="odaOfferValidApp">app only</string>
    <string name="odaOfferOnlyFor">Only for %s</string>
    <string name="odaDiamond">\u25C6</string>
    <string name="golfLeastDay">Least Selling Day</string>
    <string name="todaysEvent">Today\'s Events</string>
    <string name="upcomingEvent">Upcoming Events</string>
    <string name="todays_event">TodaysEvent</string>
    <string name="upcoming_event">UpcomingEvent</string>
    <string name="title_activity_events">Events</string>
    <!--end-->


    <string name="dsDate">Date</string>
    <string name="cash_sales">Cash</string>
    <string name="card_sales">Master Card</string>
    <string name="bank_sales">Bank</string>
    <string name="complementary_sales">Complemetary</string>
    <string name="other_sales">Other</string>
    <string name="deposite_sales">Deposite</string>
    <string name="withdraw_sales">Withdraw</string>
    <string name="total_sales">Total Sales of</string>
    <string name="category">Category</string>
    <string name="total">Total (\u20B9)</string>
    <string name="bbaSelectCity">City</string>
    <string name="bbaSelectBranch">Branch</string>
    <string name="abApp">About This</string>
    <string name="title_activity_business_branch">Business Branch</string>
    <string name="cifItem">Item</string>
    <string name="cifQty">Qty</string>
    <string name="cifRate">Rate</string>
    <string name="cifAmount">Amount</string>

    <string name="cdfConfirmMsg">Do you want to place order?</string>
    <string name="cdfCancel">Cancel</string>
    <string name="cdfConfirm">Confirm</string>
    <string name="cdfYes">Yes</string>
    <string name="cdfNo">No</string>
    <string name="cdfMsg">Your %s order will be ready on</string>
    <string name="cdfCancelMsg">Want to cancel %s?</string>

    <string name="event_ivevent">ivEvent</string>

    <string name="username">username</string>
    <string name="birthday">Happy Birthday</string>
    <string name="anniversary">Happy Anniversary</string>
    <string name="date">date</string>
    <string name="member_login">Member Login</string>
    <string name="currency">Currency</string>
    <string name="sales_from_date">From Date:</string>
    <string name="sales_to_date">To Date:</string>
    <string name="sales_date">Date:</string>
    <string name="sales_month">Month:</string>
    <string name="sales_year">Year:</string>
    <string name="event">Event</string>
    <string name="today_no_events_avilable">No events today</string>
    <string name="no_upcoming_events_avilable">No upcoming events</string>
    <string name="terms_and_conditions">Terms and conditions</string>

    <!-- notification settings -->
    <string name="NotificationSettingDescription"><![CDATA[Manage your push notifications from this section]]></string>
    <string name="PushNotificationOnOff">Push Notification</string>
    <string name="EmailNotificationOnOff">Email Notification</string>
    <string name="NotificationOnOffTime">Notify me between</string>
    <string name="NoOnTime">On Time</string>
    <string name="NoOffTime">Off Time</string>
    <string name="wsdMessage">Message</string>
    <string name="wsdCall">Call</string>
    <string name="MsgWeekInfo">*Select day of week for report</string>
    <string name="notification_title">Notification</string>
    <string name="notification_add_title">Broadcast</string>
    <string name="notification_list_fragment">Notification List</string>
    <string name="notification_add_fragment">Notification Add</string>
    <string name="business_footer">Business</string>
    <!-- end -->


</resources>
