<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvEvents"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/control_SpecingTiny"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/control_SpecingXS"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivEvent"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/control_SpecingSmall"
            android:contentDescription="@string/birthday"
            app:srcCompat="@drawable/birthday_event"
            android:tint="@color/accent_light"/>

        <com.rey.material.widget.TextView
            android:id="@+id/txtUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/control_SpecingTiny"
            android:text="@string/username"/>

        <com.rey.material.widget.TextView
            android:id="@+id/txtEventDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/date"/>

    </LinearLayout>

</LinearLayout>