<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivErrorIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/wifi_off" />

        <com.rey.material.widget.TextView
            android:id="@+id/txtMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/control_SpecingSmall"
            android:text="@string/MsgCheckConnection"
            android:textColor="@color/grey"
            android:textSize="@dimen/control_TextMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/control_SpecingTiny"
        android:layout_marginEnd="@dimen/control_SpecingTiny"
        android:layout_marginStart="@dimen/control_SpecingTiny"
        android:layout_marginTop="@dimen/control_SpecingTiny"
        android:layout_weight="1">

        <com.rey.material.widget.Button
            android:id="@+id/btnRetry"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/retry" />
    </LinearLayout>
</LinearLayout>
