<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context="com.arraybit.abposa.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="112dp"
                    android:layout_height="112dp"
                    android:layout_gravity="center"
                    android:src="@drawable/central_air"
                    tools:ignore="ContentDescription" />

                <!--<com.rey.material.widget.TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center"-->
                    <!--android:text="Central Admin"-->
                    <!--android:textSize="20dp"-->
                    <!--android:visibility="gone"/>-->
                <com.rey.material.widget.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/member_login"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"/>

        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/control_SpecingMedium"-->
        <!--android:background="@color/offwhite"-->
        <!--android:orientation="vertical">-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_SpecingSmall">

            <com.rey.material.widget.EditText
                android:id="@+id/etUserName"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/siUserName"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingEnd="@dimen/control_SpecingTiny"
                android:paddingStart="@dimen/control_SpecingTiny"
                android:singleLine="true" />

            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical"-->
            <!--android:background="@android:color/transparent">-->

            <ImageView
                android:id="@+id/ibClear"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/clear_text"
                android:padding="@dimen/control_SpecingSmall"
                android:src="@mipmap/close"
                android:tint="#757575"
                android:visibility="gone" />
            <!--</LinearLayout>-->

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_SpecingSmall">

            <com.rey.material.widget.EditText
                android:id="@+id/etPassword"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/siPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/control_SpecingTiny"
                android:paddingStart="@dimen/control_SpecingTiny"
                android:singleLine="true" />

            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical"-->
            <!--android:paddingTop="@dimen/control_SpecingTiny">-->

            <ToggleButton
                android:id="@+id/tbPasswordShow"
                style="@style/EditTextToogleButton"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_margin="@dimen/control_SpecingSmall"
                android:background="@drawable/showhideselector"
                android:padding="@dimen/control_SpecingNormal"
                android:visibility="gone"/>

            <!--</LinearLayout>-->

        </RelativeLayout>
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/control_SpecingSmall"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <com.rey.material.widget.Button
                android:id="@+id/btnSignIn"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_Height"
                android:text="@string/siLogIn"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>