<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DefaultCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/orderMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.rey.material.widget.TextView
                android:id="@+id/txtOrderNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center"
                android:paddingEnd="@dimen/control_SpecingTiny"
                android:paddingStart="@dimen/control_SpecingTiny" />

            <com.rey.material.widget.TextView
                android:id="@+id/txtOrderDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center" />

            <com.rey.material.widget.TextView
                android:id="@+id/txtTotalAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:paddingEnd="@dimen/control_SpecingTiny"
                android:paddingStart="@dimen/control_SpecingTiny" />

            <com.rey.material.widget.TextView
                android:id="@+id/txtStatus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:gravity="center"
                android:visibility="gone"/>

            <com.rey.material.widget.ImageButton
                android:id="@+id/ibCancelOrder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:background="@android:color/transparent"
                android:padding="@dimen/control_SpecingSmall" />
            <!--android:src="@drawable/cancel_drawable"-->

            <com.rey.material.widget.ImageButton
                android:id="@+id/ibVisible"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/control_SpecingSmall"
                android:layout_weight="0.1"
                android:background="@android:color/transparent"
                android:paddingEnd="0dp"
                android:paddingStart="@dimen/control_SpecingSmall"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/accent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/control_SpecingTiny"
            android:visibility="visible">

            <com.rey.material.widget.TextView
                android:id="@+id/txtHeaderItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="start|center"
                android:paddingEnd="0dp"
                android:paddingStart="@dimen/control_SpecingTiny"
                android:text="@string/cifItem"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="@dimen/control_TextTiny" />

            <com.rey.material.widget.TextView
                android:id="@+id/txtHeaderNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:gravity="center"
                android:text="@string/cifQty"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="@dimen/control_TextTiny" />

            <com.rey.material.widget.TextView
                android:id="@+id/txtHeaderRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:gravity="center|end"
                android:text="@string/cifRate"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="@dimen/control_TextTiny" />

            <com.rey.material.widget.TextView
                android:id="@+id/txtHeaderAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center|end"
                android:paddingEnd="@dimen/control_SpecingTiny"
                android:paddingStart="0dp"
                android:text="@string/cifAmount"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="@dimen/control_TextTiny" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/childDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_SpecingTiny"
            android:orientation="vertical"/>
    </LinearLayout>
</android.support.v7.widget.CardView>